added mappers, madels and entities. added controllers ony for blood group

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/patient-server?serverTimeZone=UTC&createDatabaseIfNotExist=true
 
+spring.datasource.username=emsservice
+spring.datasource.password=emsservice
+
+spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.ddl-auto=update
